# ocaml_parser_sample

./: README.md  dune  dune-project  sample_pj.opam  training.md
demo/: cmd_clang.sh  parse_tree.dot  test_syntax.cpp  test_token.cpp  training.md
src/: core.ml  core.mli  dune  lexer.mll  main.ml  parser.mly  support.ml  support.mli  syntax.ml  syntax.mli
test/: dune  t1.c  test.cpp  test.f  test_main.ml
